--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {},
   "dependencies": {},
   "devDependencies": {
+    "jsdom": "^9.8.3",
     "source-map-support": "^0.4.6"
   },
   "engines": {
